Add empty-thumb png image used as a placeholder when thumbs are not embed
2003-08-02  Remi Cohen-Scali  <rcoscali@cvs.gnome.org>

	* xpdf/Makefile.am (stock_DATA): Add empty-thumb
	png image used as a placeholder when thumbs are
	not embed in PDF doc.

--- a/pdf/xpdf/Makefile.am
+++ b/pdf/xpdf/Makefile.am
@@ -304,7 +304,8 @@ stock_DATA = 				\
 	stock-annot-trapnet.png		\
 	stock-annot-underline.png	\
 	stock-annot-widget.png		\
-	stock-annot-unknown.png
+	stock-annot-unknown.png		\
+	empty-thumb.png
 
 gladedir = $(datadir)/gpdf/glade
 glade_DATA = 				\
