Add print status dialog glade file.
2003-08-04  Remi Cohen-Scali  <rcoscali@cvs.gnome.org>

	* xpdf/Makefile.am (glade_DATA): Add print status
	dialog glade file.

--- a/pdf/xpdf/Makefile.am
+++ b/pdf/xpdf/Makefile.am
@@ -310,7 +310,8 @@ stock_DATA = 				\
 gladedir = $(datadir)/gpdf/glade
 glade_DATA = 				\
 	gpdf-properties-dialog.glade	\
-	gpdf-findtext-dialog.glade
+	gpdf-findtext-dialog.glade	\
+	gpdf-printing-dialog.glade
 
 server_in_files = GNOME_PDF.server.in.in
 serverdir = $(libdir)/bonobo/servers
