Put back tests dir. (libxpdf_a_SOURCES): Add TextOutputDev class to xpdf
2003-08-08  Remi Cohen-Scali  <rcoscali@cvs.gnome.org>

	* xpdf/Makefile.am (SUBDIRS): Put back tests
	dir.
	(libxpdf_a_SOURCES): Add TextOutputDev class
	to xpdf lib.
	(libgpdf_a_SOURCES): Add gpdf-control-private
	header to gpdf lib sources.

--- a/pdf/xpdf/Makefile.am
+++ b/pdf/xpdf/Makefile.am
@@ -1,4 +1,4 @@
-#SUBDIRS = . tests
+SUBDIRS = . tests
 
 INCLUDES =							\
 	-I$(top_srcdir)						\
@@ -81,6 +81,8 @@ libxpdf_a_SOURCES =		\
 	Outline.h		\
 	OutputDev.cc 		\
 	OutputDev.h		\
+	TextOutputDev.cc	\
+	TextOutputDev.h		\
 	Page.cc 		\
 	Page.h			\
 	Parser.cc 		\
@@ -129,6 +131,7 @@ libgpdf_a_SOURCES =			\
 	Thumb.h				\
 	gpdf-control.cc			\
 	gpdf-control.h			\
+	gpdf-control-private.h		\
 	gpdf-g-switch.h			\
 	gpdf-link-canvas-item.cc	\
 	gpdf-link-canvas-item.h		\
