Added findtext glade file (dialog).
2004-06-14  Remi Cohen-Scali  <rcoscali@cvs.gnome.org>

	* xpdf/Makefile.am (glade_DATA): Added findtext glade
	file (dialog).

--- a/pdf/xpdf/Makefile.am
+++ b/pdf/xpdf/Makefile.am
@@ -248,6 +248,7 @@ stock_DATA = 				\
 
 gladedir = $(datadir)/gpdf/glade
 glade_DATA =					\
+	gpdf-findtext-dialog.glade		\
 	gpdf-print-progress-dialog.glade	\
 	gpdf-properties-dialog.glade
 
