Ifdef out the editable toolbars code on hildon

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -16,11 +16,12 @@ man_MANS=evince.1
 
 uidir = $(pkgdatadir)
 ui_DATA =				\
-	evince-toolbar.xml		\
 	hand-open.png
 
 if !PLATFORM_HILDON
-ui_DATA += evince-ui.xml
+ui_DATA += \
+	evince-ui.xml \
+	evince-toolbar.xml
 else
 ui_DATA += evince-hildon-ui.xml
 endif
