shell: [maemo5] Add custom gtkrc file to redefine stock icons
On maemo5, the stock icons aren't available in the toolbar size used, which
makes them blurry due to scaling. Add a custom gtkrc file to re-define
the stock icons using the platform icons that are available in the
required size.

Analogous to bug #584669.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -30,6 +30,13 @@ if ENABLE_PREVIEWER
 ui_DATA += evince-previewer-ui.xml
 endif
 
+# GtkRC file
+
+if PLATFORM_HILDON
+rcdir = $(pkgdatadir)
+dist_rc_DATA = gtkrc-hildon
+endif
+
 #
 # Desktop file
 #
